--- a/src/tgcommander/TGcommanderView.form
+++ b/src/tgcommander/TGcommanderView.form
@@ -20,7 +20,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="eszkoztar" pref="736" max="32767" attributes="0"/>
+                  <Component id="eszkoztar" pref="734" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Component id="panelek" alignment="0" pref="746" max="32767" attributes="0"/>
@@ -211,6 +211,7 @@
           <Properties>
             <Property name="dividerLocation" type="int" value="400"/>
             <Property name="resizeWeight" type="double" value="0.5"/>
+            <Property name="toolTipText" type="java.lang.String" resourceKey="panelek.toolTipText"/>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[400, 200]"/>
             </Property>
@@ -235,8 +236,8 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="balFelsoPanel" alignment="0" max="32767" attributes="0"/>
-                      <Component id="balScrollPane" alignment="1" pref="399" max="32767" attributes="0"/>
+                      <Component id="balFelsoPanel" alignment="0" pref="466" max="32767" attributes="0"/>
+                      <Component id="balScrollPane" alignment="1" pref="466" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -244,7 +245,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="balFelsoPanel" min="-2" pref="56" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="balScrollPane" pref="354" max="32767" attributes="0"/>
+                          <Component id="balScrollPane" pref="356" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -266,6 +267,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="balLista">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" resourceKey="balLista.background"/>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                           <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;                {null, null, null, null},&#xa;                {null, null, null, null},&#xa;                {null, null, null, null},&#xa;                {null, null, null, null}&#xa;            },&#xa;            new String [] {&#xa;                &quot;N&#xe9;v&quot;, &quot;M&#xe9;ret&quot;, &quot;Utolj&#xe1;ra m&#xf3;dos&#xed;tva&quot;, &quot;Jogosults&#xe1;gok&quot;&#xa;            }&#xa;)" type="code"/>
                         </Property>
@@ -291,16 +293,16 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="1" attributes="0">
-                                      <Component id="balKonyvtar" pref="323" max="32767" attributes="0"/>
+                                      <Component id="balKonyvtar" pref="314" max="32767" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="balGyokerGomb" min="-2" pref="25" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                                       <Component id="balSzuloGomb" min="-2" pref="22" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel1" pref="323" max="32767" attributes="0"/>
-                                      <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
+                                      <Component id="jLabel1" pref="322" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -385,7 +387,7 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jobbFelsoPanel" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jobbScrollPane" alignment="1" pref="340" max="32767" attributes="0"/>
+                      <Component id="jobbScrollPane" alignment="1" pref="274" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -393,7 +395,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jobbFelsoPanel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jobbScrollPane" pref="354" max="32767" attributes="0"/>
+                          <Component id="jobbScrollPane" pref="347" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -415,6 +417,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="jobbLista">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" resourceKey="jobbLista.background"/>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                           <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;                {null, null, null, null},&#xa;                {null, null, null, null},&#xa;                {null, null, null, null},&#xa;                {null, null, null, null}&#xa;            },&#xa;            new String [] {&#xa;                &quot;N&#xe9;v&quot;, &quot;M&#xe9;ret&quot;, &quot;Utolj&#xe1;ra m&#xf3;dos&#xed;tva&quot;, &quot;Jogosults&#xe1;gok&quot;&#xa;            }&#xa;)" type="code"/>
                         </Property>
@@ -437,7 +440,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="1" attributes="0">
-                                      <Component id="jobbKonyvtar" pref="260" max="32767" attributes="0"/>
+                                      <Component id="jobbKonyvtar" pref="190" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                                       <Component id="jobbGyokerGomb" min="-2" pref="24" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
@@ -445,7 +448,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel2" pref="270" max="32767" attributes="0"/>
+                                      <Component id="jLabel2" pref="202" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -675,7 +678,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusMessageLabel" min="-2" pref="241" max="-2" attributes="0"/>
-                  <EmptySpace pref="335" max="32767" attributes="0"/>
+                  <EmptySpace pref="323" max="32767" attributes="0"/>
                   <Component id="progressBar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusAnimationLabel" min="-2" max="-2" attributes="0"/>
