--- a/src/tgcommander/TGcommanderView.form
+++ b/src/tgcommander/TGcommanderView.form
@@ -239,8 +239,8 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="balFelsoPanel" alignment="0" pref="400" max="32767" attributes="0"/>
-                      <Component id="balScrollPane" alignment="1" max="32767" attributes="0"/>
+                      <Component id="balFelsoPanel" alignment="0" pref="403" max="32767" attributes="0"/>
+                      <Component id="balScrollPane" alignment="1" pref="403" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -301,11 +301,11 @@
                                       <Component id="balGyokerGomb" min="-2" pref="25" max="-2" attributes="0"/>
                                       <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                                       <Component id="balSzuloGomb" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="balFajlokSzama" pref="322" max="32767" attributes="0"/>
-                                      <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -335,9 +335,6 @@
                     </Component>
                     <Component class="javax.swing.JButton" name="balGyokerGomb">
                       <Properties>
-                        <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
-                          <action class="tgcommander.TGcommanderView" id="gyokerkonyvtar" methodName="gyokerkonyvtar"/>
-                        </Property>
                         <Property name="text" type="java.lang.String" resourceKey="balGyokerGomb.text"/>
                         <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                           <Insets value="[2, 2, 2, 2]"/>
@@ -356,9 +353,6 @@
                     </Component>
                     <Component class="javax.swing.JButton" name="balSzuloGomb">
                       <Properties>
-                        <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
-                          <action class="tgcommander.TGcommanderView" id="szuloKonyvtar" methodName="szuloKonyvtar"/>
-                        </Property>
                         <Property name="text" type="java.lang.String" resourceKey="balSzuloGomb.text"/>
                         <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                           <Insets value="[2, 2, 2, 2]"/>
@@ -685,12 +679,11 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <Component id="progressBar" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <Component id="statusMessageLabel" min="-2" pref="14" max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="progressBar" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="statusMessageLabel" alignment="0" min="-2" pref="14" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
